--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -9,11 +9,6 @@
   height: 18.5px;
   opacity: 0.8; }
 
-.header_box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between; }
-
 .link_box {
   display: flex;
   flex-direction: row;
@@ -51,7 +46,7 @@
   height: 10.5px;
   font-family: Roboto;
   font-size: 9px;
-  font-weight: 500;
+  font-weight: 900;
   font-style: normal;
   font-stretch: normal;
   line-height: normal;
@@ -87,12 +82,38 @@
   height: 10.5px;
   font-family: Roboto;
   font-size: 9px;
-  font-weight: 500;
+  font-weight: 900;
   font-style: normal;
   font-stretch: normal;
   line-height: normal;
   letter-spacing: normal;
   color: #2c3e4f; }
+
+.layer {
+  width: 23px;
+  height: 23.5px;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
+  -webkit-text-stroke: 0.5px #2c3e4f; }
+
+.layer2 {
+  width: 23px;
+  height: 23.5px;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #2c3e4f;
+  -webkit-text-stroke: 0.5px #2c3e4f; }
 
 .Full-Name {
   width: 89.5px;
@@ -105,3 +126,230 @@
   line-height: 1.5;
   letter-spacing: normal;
   color: #575962; }
+
+.item .Fill {
+  width: 198px;
+  height: 35.5px;
+  border-radius: 2px;
+  background-color: #ffffff;
+  border: solid 0.5px #ebedf2; }
+
+.General-partner-or-L {
+  width: 150px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.Limited-partner-or-o {
+  width: 130px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.Radio {
+  width: 9px;
+  height: 9px;
+  border-radius: 4.5px;
+  background-color: #ffffff;
+  border: solid 0.5px #dfe2ea; }
+
+.Radio:checked {
+  width: 9px;
+  height: 9px;
+  border-radius: 4.5px;
+  background-color: #ffffff;
+  border: solid 2px #1cbacf; }
+
+.Domestic-partner {
+  width: 80px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.Foreign-partner {
+  width: 80px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.entity-box {
+  margin-top: 7.5px;
+  margin-bottom: 140px; }
+
+.If-this-partner-is-a {
+  width: 174.5px;
+  height: 21px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.form-content {
+  display: flex;
+  flex-direction: row; }
+  .form-content .form-right {
+    margin-left: 10px; }
+
+.Partners-share-of-p {
+  width: 126.5px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.plc-box p {
+  width: 15px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962;
+  margin-right: 20px; }
+
+.plc-box-sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 4.5px; }
+  .plc-box-sub .Fill {
+    width: 170px;
+    height: 18.5px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    border: solid 0.5px #c1c2c5;
+    display: flex; }
+
+.percentage {
+  width: 5.5px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #17181a;
+  margin: 5px; }
+
+.liability-box p {
+  width: 213.5px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.liability-box .liability-box-sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 8.5px; }
+  .liability-box .liability-box-sub .Fill {
+    width: 145px;
+    height: 18.5px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    border: solid 0.5px #a4a4a7;
+    display: flex; }
+
+.dollarSign {
+  width: 4px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 10px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  margin: 4px; }
+
+.capital-box p {
+  width: 213.5px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  color: #575962; }
+
+.capital-box .capital-box-sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 4px; }
+  .capital-box .capital-box-sub .Fill {
+    display: flex;
+    width: 145px;
+    height: 18.5px;
+    border-radius: 2px;
+    background-color: #ffffff;
+    border: solid 0.5px #ebedf2; }
+
+.check-boxes {
+  margin-top: 5px;
+  font-size: 7px;
+  color: #575962;
+  display: flex;
+  justify-content: space-between; }
+  .check-boxes .check-boxes-sub {
+    display: flex;
+    align-items: center; }
+    .check-boxes .check-boxes-sub input {
+      width: 9px;
+      height: 9px; }
+
+.contribute-box {
+  font-size: 7px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 5px; }
+  .contribute-box .contribute-box-sub {
+    display: flex;
+    align-items: center; }
