--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,8 +1,9 @@
-.header_box {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
+// .header_box {
+//   display: flex;
+//   flex-direction: row;
+//   justify-content: space-between;
+//   margin-bottom: 20px;
+// }
 
 .link_box {
   display: flex;
@@ -36,4 +37,59 @@
   border-radius: 4px;
   background-color: #2c3e4f;
   border: solid 2.5px rgba(44, 62, 79, 0.1);
+}
+
+.section_header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.Schedule-K-1 {
+  width: 52.5px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 9px;
+  font-weight: 900;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #2c3e4f;
+}
+.Form-1065 {
+  width: 33px;
+  height: 7px;
+  font-family: Roboto;
+  font-size: 6px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #2c3e4f;
+}
+.Part-II-Information {
+  width: 97px;
+  height: 7px;
+  font-family: Roboto;
+  font-size: 6px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #2c3e4f;
+}
+.Partners-Share-of-I {
+  width: 206px;
+  height: 10.5px;
+  font-family: Roboto;
+  font-size: 9px;
+  font-weight: 900;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #2c3e4f;
 }
