--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -13,3 +13,9 @@
   opacity: 0.8;
   // border: solid 0.5px rgba(182, 179, 179, 0.349);
 }
+
+.ctrl-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
