--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -2,17 +2,31 @@
   width: 640px;
   height: 439.5px;
   background-color: #ffffff;
-  box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08); }
+  box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08);
+  position: relative; }
+
+.ctrl-btn {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+  border: solid grey 1px; }
 
 .Form-placeholder {
   width: 183px;
   height: 18.5px;
   opacity: 0.8; }
 
-.ctrl-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px; }
+@media (max-width: 776px) {
+  .Portlet {
+    width: 500px;
+    background-color: #ffffff;
+    box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08);
+    position: relative; }
+  .ctrl-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: solid grey 1px; } }
 
 .link_box {
   display: flex;
@@ -45,7 +59,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-top: 10.5px; }
+  margin-top: 10.5px;
+  margin-right: 5px;
+  align-items: center; }
 
 .Schedule-K-1 {
   width: 52.5px;
@@ -123,6 +139,15 @@
   letter-spacing: normal;
   color: #2c3e4f;
   -webkit-text-stroke: 0.5px #2c3e4f; }
+
+@media (max-width: 776px) {
+  .section_header {
+    display: none; }
+  .link_box {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start; } }
 
 .Full-Name {
   width: 89.5px;
@@ -363,6 +388,13 @@
     display: flex;
     align-items: center; }
 
+@media (max-width: 776px) {
+  .form-content {
+    display: flex;
+    flex-direction: column; }
+    .form-content .form-right {
+      margin-left: 10px; } }
+
 .part2-content {
   margin-top: 5px;
   display: flex;
@@ -400,6 +432,19 @@
       border-radius: 2px;
       background-color: #ffffff;
       border: solid 0.5px #525253; }
+
+@media (max-width: 776px) {
+  .part2-content {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column; }
+  .part2-left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+  .part2-items-sub {
+    width: 80%; } }
 
 .part3-content {
   margin-top: 5px;
@@ -444,3 +489,21 @@
   height: 434.5px;
   background-color: #ffffff;
   box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08); }
+
+@media (max-width: 776px) {
+  .part3-content {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column; }
+  .part3-left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around; }
+  .part3-items-sub {
+    width: 80%; }
+    .part3-items-sub .Fill {
+      width: 100%;
+      border-radius: 2px;
+      background-color: #ffffff;
+      border: solid 0.5px #525253; } }
