--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -1,12 +1,21 @@
 // body {
 //   background: linen;
 // }
+
 .Portlet {
   width: 640px;
   height: 439.5px;
   background-color: #ffffff;
   box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08);
+  position: relative;
 }
+.ctrl-btn {
+  position: absolute;
+  top: 10px;
+  right: 2px;
+  border: solid grey 1px;
+}
+
 .Form-placeholder {
   width: 183px;
   height: 18.5px;
@@ -14,8 +23,18 @@
   // border: solid 0.5px rgba(182, 179, 179, 0.349);
 }
 
-.ctrl-btn {
-  position: absolute;
-  top: 10px;
-  right: 10px;
+@media (max-width: 776px) {
+  .Portlet {
+    width: 500px;
+    // height: 439.5px;
+    background-color: #ffffff;
+    box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08);
+    position: relative;
+  }
+  .ctrl-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: solid grey 1px;
+  }
 }
