--- a/src/scss/_partII.scss
+++ b/src/scss/_partII.scss
@@ -43,3 +43,20 @@
     }
   }
 }
+
+@media (max-width: 776px) {
+  .part2-content {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+  .part2-left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .part2-items-sub {
+    width: 80%;
+  }
+}
