--- a/src/scss/_partIII.scss
+++ b/src/scss/_partIII.scss
@@ -50,3 +50,28 @@
   background-color: #ffffff;
   box-shadow: 0 0.5px 7.5px 0 rgba(69, 65, 78, 0.08);
 }
+
+@media (max-width: 776px) {
+  .part3-content {
+    margin-top: 5px;
+    display: flex;
+    flex-direction: column;
+  }
+  .part3-left {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .part3-items-sub {
+    width: 80%;
+    .Fill {
+      // margin-top: 5px;
+      width: 100%;
+      // height: 18.5px;
+      border-radius: 2px;
+      background-color: #ffffff;
+      border: solid 0.5px #525253;
+    }
+  }
+}
